--- a/header.tex
+++ b/header.tex
@@ -64,3 +64,5 @@
 % macros
 \newcommand{\gcc}{{\tt gcc}}
 \newcommand{\gprof}{{\tt gprof}}
+\newcommand{\spacesaving}{Space-Saving}
+\newcommand{\missing}{\textbf{XXX}}
