--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -196,7 +196,7 @@
 
 @inproceedings{Lin08,
   author    = {Lin, Zhiqiang and Jiang, Xuxian and Xu, Dongyan and Zhang, Xiangyu},
-  title     = {Automatic Protocol Format Reverse Engineering Through Context-Aware Monitored Execution},
+  title     = {{Automatic Protocol Format Reverse Engineering Through Context-Aware Monitored Execution}},
   booktitle = {Proceedings of the 15th Annual Network and Distributed System Security Symposium},
   series    = {NDSS '08},
   address   = {San Diego, CA},
@@ -314,7 +314,7 @@
   Doi = {10.14778/1454159.1454225},
   Issn = {2150-8097},
   Issue_Date = {August 2008},
-  Journal = {Proc. VLDB Endow.},
+  Journal = {Proceedings of the VLDB Endowment},
   Month = aug,
   Number = {2},
   Numpages = {12},
@@ -335,155 +335,173 @@
 }
 
 @inproceedings{Whaley00,
-	Acmid = {337483},
-	Address = {New York, NY, USA},
-	Author = {Whaley, John},
-	Booktitle = {Proceedings of the ACM 2000 Conference on Java Grande},
-	Doi = {10.1145/337449.337483},
-	Isbn = {1-58113-288-3},
-	Location = {San Francisco, California, USA},
-	Numpages = {10},
-	Pages = {78--87},
-	Publisher = {ACM},
-	Series = {JAVA '00},
-	Title = {{A Portable Sampling-based Profiler for Java Virtual Machines}},
-	Url = {http://doi.acm.org/10.1145/337449.337483},
-	Year = {2000}
+  Acmid = {337483},
+  Address = {New York, NY, USA},
+  Author = {Whaley, John},
+  Booktitle = {Proceedings of the ACM 2000 Conference on Java Grande},
+  Doi = {10.1145/337449.337483},
+  Isbn = {1-58113-288-3},
+  Location = {San Francisco, California, USA},
+  Numpages = {10},
+  Pages = {78--87},
+  Publisher = {ACM},
+  Series = {JAVA '00},
+  Title = {{A Portable Sampling-based Profiler for Java Virtual Machines}},
+  Url = {http://doi.acm.org/10.1145/337449.337483},
+  Year = {2000}
 }
 
 @article{Bernat07,
-	Acmid = {1276895},
-	Address = {Chichester, UK},
-	Author = {Bernat, Andrew R. and Miller, Barton P.},
-	Doi = {10.1002/cpe.v19:11},
-	Issn = {1532-0626},
-	Issue_Date = {August 2007},
-	Journal = {Concurrency and Computation: Practice and Experience},
-	Keywords = {dynamic instrumentation, performance analysis, profiling},
-	Month = aug,
-	Number = {11},
-	Numpages = {15},
-	Pages = {1533--1547},
-	Publisher = {John Wiley and Sons Ltd.},
-	Title = {{Incremental Call-Path Profiling}},
-	Volume = {19},
-	Year = {2007}
+  Acmid = {1276895},
+  Address = {Chichester, UK},
+  Author = {Bernat, Andrew R. and Miller, Barton P.},
+  Doi = {10.1002/cpe.v19:11},
+  Issn = {1532-0626},
+  Issue_Date = {August 2007},
+  Journal = {Concurrency and Computation: Practice and Experience},
+  Keywords = {dynamic instrumentation, performance analysis, profiling},
+  Month = aug,
+  Number = {11},
+  Numpages = {15},
+  Pages = {1533--1547},
+  Publisher = {John Wiley and Sons Ltd.},
+  Title = {{Incremental Call-Path Profiling}},
+  Volume = {19},
+  Year = {2007}
 }
 
 @inproceedings{Froyd05,
-	Acmid = {1088161},
-	Address = {New York, NY, USA},
-	Author = {Froyd, Nathan and Mellor-Crummey, John and Fowler, Rob},
-	Booktitle = {Proceedings of the 19th Annual International Conference on Supercomputing},
-	Doi = {10.1145/1088149.1088161},
-	Isbn = {1-59593-167-8},
-	Location = {Cambridge, Massachusetts},
-	Numpages = {10},
-	Pages = {81--90},
-	Publisher = {ACM},
-	Series = {ICS '05},
-	Title = {{Low-overhead Call Path Profiling of Unmodified, Optimized Code}},
-	Url = {http://doi.acm.org/10.1145/1088149.1088161},
-	Year = {2005}
+  Acmid = {1088161},
+  Address = {New York, NY, USA},
+  Author = {Froyd, Nathan and Mellor-Crummey, John and Fowler, Rob},
+  Booktitle = {Proceedings of the 19th Annual International Conference on Supercomputing},
+  Doi = {10.1145/1088149.1088161},
+  Isbn = {1-59593-167-8},
+  Location = {Cambridge, Massachusetts},
+  Numpages = {10},
+  Pages = {81--90},
+  Publisher = {ACM},
+  Series = {ICS '05},
+  Title = {{Low-overhead Call Path Profiling of Unmodified, Optimized Code}},
+  Url = {http://doi.acm.org/10.1145/1088149.1088161},
+  Year = {2005}
 }
 
 @inproceedings{Hall93,
-	Acmid = {1361454},
-	Address = {Berkeley, CA, USA},
-	Articleno = {1},
-	Author = {Hall, Robert J. and Goldberg, Aaron J.},
-	Booktitle = {Proceedings of the USENIX Summer 1993 Technical Conference on Summer Technical Conference - Volume 1},
-	Isbn = {987-654-3333-22-1},
-	Location = {Cincinnati, Ohio},
-	Numpages = {19},
-	Pages = {1:1--1:19},
-	Publisher = {USENIX Association},
-	Series = {USENIX-STC '93},
-	Title = {{Call Path Profiling of Monotonic Program Resources in UNIX}},
-	Url = {http://dl.acm.org/citation.cfm?id=1361453.1361454},
-	Year = {1993}
+  Acmid = {1361454},
+  Address = {Berkeley, CA, USA},
+  Articleno = {1},
+  Author = {Hall, Robert J. and Goldberg, Aaron J.},
+  Booktitle = {Proceedings of the USENIX Summer 1993 Technical Conference on Summer Technical Conference - Volume 1},
+  Isbn = {987-654-3333-22-1},
+  Location = {Cincinnati, Ohio},
+  Numpages = {19},
+  Pages = {1:1--1:19},
+  Publisher = {USENIX Association},
+  Series = {USENIX-STC '93},
+  Title = {{Call Path Profiling of Monotonic Program Resources in UNIX}},
+  Url = {http://dl.acm.org/citation.cfm?id=1361453.1361454},
+  Year = {1993}
 }
 
 
 @inproceedings{Arnold01,
-	Acmid = {378832},
-	Address = {New York, NY, USA},
-	Author = {Arnold, Matthew and Ryder, Barbara G.},
-	Booktitle = {Proceedings of the ACM SIGPLAN 2001 Conference on Programming Language Design and Implementation},
-	Doi = {10.1145/378795.378832},
-	Isbn = {1-58113-414-2},
-	Location = {Snowbird, Utah, USA},
-	Numpages = {12},
-	Pages = {168--179},
-	Publisher = {ACM},
-	Series = {PLDI '01},
-	Title = {{A Framework for Reducing the Cost of Instrumented Code}},
-	Url = {http://doi.acm.org/10.1145/378795.378832},
-	Year = {2001}
+  Acmid = {378832},
+  Address = {New York, NY, USA},
+  Author = {Arnold, Matthew and Ryder, Barbara G.},
+  Booktitle = {Proceedings of the ACM SIGPLAN 2001 Conference on Programming Language Design and Implementation},
+  Doi = {10.1145/378795.378832},
+  Isbn = {1-58113-414-2},
+  Location = {Snowbird, Utah, USA},
+  Numpages = {12},
+  Pages = {168--179},
+  Publisher = {ACM},
+  Series = {PLDI '01},
+  Title = {{A Framework for Reducing the Cost of Instrumented Code}},
+  Url = {http://doi.acm.org/10.1145/378795.378832},
+  Year = {2001}
 }
 
 @inproceedings{Hirzel01,
-	Author = {Martin Hirzel and Trishul Chilimbi},
-	Booktitle = {In 4th ACM Workshop on Feedback-Directed and Dynamic Optimization},
-	Pages = {117--126},
-	Title = {{Bursty Tracing: A Framework for Low-Overhead Temporal Profiling}},
-	Year = {2001},
-	Url = {http://research.microsoft.com/en-us/um/people/trishulc/papers/bursts_fddo.pdf}
+  Author = {Martin Hirzel and Trishul Chilimbi},
+  Booktitle = {In 4th ACM Workshop on Feedback-Directed and Dynamic Optimization},
+  Pages = {117--126},
+  Title = {{Bursty Tracing: A Framework for Low-Overhead Temporal Profiling}},
+  Year = {2001},
+  Url = {http://research.microsoft.com/en-us/um/people/trishulc/papers/bursts_fddo.pdf}
 }
 
 @inproceedings{Serrano09,
-	Acmid = {1545072},
-	Address = {Washington, DC, USA},
-	Author = {Serrano, Mauricio and Zhuang, Xiaotong},
-	Booktitle = {Proceedings of the 7th Annual IEEE/ACM International Symposium on Code Generation and Optimization},
-	Doi = {10.1109/CGO.2009.12},
-	Isbn = {978-0-7695-3576-0},
-	Keywords = {Calling Context Tree, Call Context Analysis, Program Understanding},
-	Numpages = {10},
-	Pages = {221--230},
-	Publisher = {IEEE Computer Society},
-	Series = {CGO '09},
-	Title = {{Building Approximate Calling Context from Partial Call Traces}},
-	Url = {http://dx.doi.org/10.1109/CGO.2009.12},
-	Year = {2009}
+  Acmid = {1545072},
+  Address = {Washington, DC, USA},
+  Author = {Serrano, Mauricio and Zhuang, Xiaotong},
+  Booktitle = {Proceedings of the 7th Annual IEEE/ACM International Symposium on Code Generation and Optimization},
+  Doi = {10.1109/CGO.2009.12},
+  Isbn = {978-0-7695-3576-0},
+  Keywords = {Calling Context Tree, Call Context Analysis, Program Understanding},
+  Numpages = {10},
+  Pages = {221--230},
+  Publisher = {IEEE Computer Society},
+  Series = {CGO '09},
+  Title = {{Building Approximate Calling Context from Partial Call Traces}},
+  Url = {http://dx.doi.org/10.1109/CGO.2009.12},
+  Year = {2009}
 }
 
 @inproceedings{Huang13,
-	Acmid = {2509510},
-	Address = {New York, NY, USA},
-	Author = {Huang, Jipeng and Bond, Michael D.},
-	Booktitle = {Proceedings of the 2013 ACM SIGPLAN International Conference on Object Oriented Programming Systems Languages \& Applications},
-	Doi = {10.1145/2509136.2509510},
-	Isbn = {978-1-4503-2374-1},
-	Keywords = {calling context, context sensitivity, dynamic analysis, garbage collection, leak detection, race detection},
-	Location = {Indianapolis, Indiana, USA},
-	Numpages = {20},
-	Pages = {53--72},
-	Publisher = {ACM},
-	Series = {OOPSLA '13},
-	Title = {{Efficient Context Sensitivity for Dynamic Analyses via Calling Context Uptrees and Customized Memory Management}},
-	Url = {http://doi.acm.org/10.1145/2509136.2509510},
-	Year = {2013}
+  Acmid = {2509510},
+  Address = {New York, NY, USA},
+  Author = {Huang, Jipeng and Bond, Michael D.},
+  Booktitle = {Proceedings of the 2013 ACM SIGPLAN International Conference on Object Oriented Programming Systems Languages \& Applications},
+  Doi = {10.1145/2509136.2509510},
+  Isbn = {978-1-4503-2374-1},
+  Keywords = {calling context, context sensitivity, dynamic analysis, garbage collection, leak detection, race detection},
+  Location = {Indianapolis, Indiana, USA},
+  Numpages = {20},
+  Pages = {53--72},
+  Publisher = {ACM},
+  Series = {OOPSLA '13},
+  Title = {{Efficient Context Sensitivity for Dynamic Analyses via Calling Context Uptrees and Customized Memory Management}},
+  Url = {http://doi.acm.org/10.1145/2509136.2509510},
+  Year = {2013}
 }
 
 @article{Hall95,
-	Acmid = {631160},
-	Address = {Piscataway, NJ, USA},
-	Author = {Hall, Robert J.},
-	Doi = {10.1109/32.391375},
-	Issn = {0098-5589},
-	Issue_Date = {June 1995},
-	Journal = {IEEE Transactions on Software Engineering},
-	Keywords = {Performance tuning, call path, profiling.},
-	Month = jun,
-	Number = {6},
-	Numpages = {16},
-	Pages = {481--496},
-	Publisher = {IEEE Press},
-	Title = {{Call Path Refinement Profiles}},
-	Url = {http://dx.doi.org/10.1109/32.391375},
-	Volume = {21},
-	Year = {1995}
+  Acmid = {631160},
+  Address = {Piscataway, NJ, USA},
+  Author = {Hall, Robert J.},
+  Doi = {10.1109/32.391375},
+  Issn = {0098-5589},
+  Issue_Date = {June 1995},
+  Journal = {IEEE Transactions on Software Engineering},
+  Keywords = {Performance tuning, call path, profiling.},
+  Month = jun,
+  Number = {6},
+  Numpages = {16},
+  Pages = {481--496},
+  Publisher = {IEEE Press},
+  Title = {{Call Path Refinement Profiles}},
+  Url = {http://dx.doi.org/10.1109/32.391375},
+  Volume = {21},
+  Year = {1995}
+}
+
+@inproceedings{Sumner10,
+  author = {Sumner, William N. and Zheng, Yunhui and Weeratunge, Dasarath and Zhang, Xiangyu},
+  title = {{Precise Calling Context Encoding}},
+  booktitle = {Proceedings of the 32nd ACM/IEEE International Conference on Software Engineering - Volume 1},
+  series = {ICSE '10},
+  year = {2010},
+  isbn = {978-1-60558-719-6},
+  location = {Cape Town, South Africa},
+  pages = {525--534},
+  numpages = {10},
+  url = {http://doi.acm.org/10.1145/1806799.1806875},
+  doi = {10.1145/1806799.1806875},
+  acmid = {1806875},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {calling context, dynamic context sensitivity, profiling},
 }
 
 @article{Sumner12,
@@ -541,4 +559,87 @@
   publisher = {ACM},
   address = {New York, NY, USA},
   keywords = {Calling context encoding, object-oriented programming}
+}
+
+@article{Metwally06,
+  Acmid = {1166084},
+  Address = {New York, NY, USA},
+  Author = {Metwally, Ahmed and Agrawal, Divyakant and Abbadi, Amr El},
+  Doi = {10.1145/1166074.1166084},
+  Issn = {0362-5915},
+  Issue_Date = {September 2006},
+  Journal = {ACM Trans. Database Syst.},
+  Keywords = {Data streams, Zipfian data, advertising networks, approximate queries, continuous queries, exact queries, frequent elements, top-k elements},
+  Month = sep,
+  Number = {3},
+  Numpages = {39},
+  Pages = {1095--1133},
+  Publisher = {ACM},
+  Title = {{An Integrated Efficient Solution for Computing Frequent and Top-k Elements in Data Streams}},
+  Url = {http://doi.acm.org/10.1145/1166074.1166084},
+  Volume = {31},
+  Year = {2006}
+}
+
+@article{Manerikar2009,
+  title = {{Frequent Items in Streaming Data: An Experimental Evaluation of the State-of-the-art}},
+  journal = {Data \& Knowledge Engineering},
+  volume = {68},
+  number = {4},
+  pages = {415--430},
+  year = {2009},
+  issn = {0169-023X},
+  doi = {10.1016/j.datak.2008.11.001},
+  url = {http://www.sciencedirect.com/science/article/pii/S0169023X08001663},
+  author = {Nishad Manerikar and Themis Palpanas},
+  keywords = {Frequent item, Data streams, Stream mining}
+}
+
+@inproceedings{Delia2011,
+  Acmid = {1993559},
+  Address = {New York, NY, USA},
+  Author = {D'Elia, Daniele Cono and Demetrescu, Camil and Finocchi, Irene},
+  Booktitle = {Proceedings of the 32Nd ACM SIGPLAN Conference on Programming Language Design and Implementation},
+  Doi = {10.1145/1993498.1993559},
+  Isbn = {978-1-4503-0663-8},
+  Keywords = {data streaming algorithms, dynamic program analysis, frequent items, performance profiling, program instrumentation},
+  Location = {San Jose, California, USA},
+  Numpages = {12},
+  Pages = {516--527},
+  Publisher = {ACM},
+  Series = {PLDI '11},
+  Title = {Mining Hot Calling Contexts in Small Space},
+  Url = {http://doi.acm.org/10.1145/1993498.1993559},
+  Year = {2011}
+}
+
+@inproceedings{Manku02,
+  Acmid = {1287400},
+  Author = {Manku, Gurmeet Singh and Motwani, Rajeev},
+  Booktitle = {Proceedings of the 28th International Conference on Very Large Data Bases},
+  Location = {Hong Kong, China},
+  Numpages = {12},
+  Pages = {346--357},
+  Publisher = {VLDB Endowment},
+  Series = {VLDB '02},
+  Title = {{Approximate Frequency Counts over Data Streams}},
+  Url = {http://dl.acm.org/citation.cfm?id=1287369.1287400},
+  Year = {2002},
+  Doi = {10.1016/b978-155860869-6/50038-x}
+}
+
+@inproceedings{Charikar02,
+  author = {Charikar, Moses and Chen, Kevin and Farach-Colton, Martin},
+  title = {{Finding Frequent Items in Data Streams}},
+  booktitle = {Proceedings of the 29th International Colloquium on Automata, Languages and Programming},
+  series = {ICALP '02},
+  year = {2002},
+  isbn = {3-540-43864-5},
+  pages = {693--703},
+  numpages = {11},
+  url = {http://dl.acm.org/citation.cfm?id=646255.684566},
+  acmid = {684566},
+  publisher = {Springer-Verlag},
+  address = {London, UK, UK},
+  doi = {10.1007/3-540-45465-9_59}
 }
