--- a/header.tex
+++ b/header.tex
@@ -43,7 +43,7 @@
 \newcommand{\mylemma}{Lemma~}
 \newcommand{\mytheorem}{Theorem~}
 \newcommand{\myequation}{Equation~}
-\newcommand{\myalgorithm}{Algorithm~}
+\newcommand{\myalgorithm}{Figure~}
 \fi
 
 % theorems
