--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -643,3 +643,197 @@
   address = {London, UK, UK},
   doi = {10.1007/3-540-45465-9_59}
 }
+
+@inproceedings{Ball96,
+  author = {Ball, Thomas and Larus, James R.},
+  title = {{Efficient Path Profiling}},
+  booktitle = {Proceedings of the 29th Annual ACM/IEEE International Symposium on Microarchitecture},
+  series = {MICRO 29},
+  year = {1996},
+  isbn = {0-8186-7641-8},
+  location = {Paris, France},
+  pages = {46--57},
+  numpages = {12},
+  url = {http://dl.acm.org/citation.cfm?id=243846.243857},
+  acmid = {243857},
+  publisher = {IEEE Computer Society},
+  address = {Washington, DC, USA},
+  doi = {10.1109/micro.1996.566449}
+}
+
+@article{Fisher81,
+  author = {Fisher, J. A.},
+  title = {{Trace Scheduling: A Technique for Global Microcode Compaction}},
+  journal = {IEEE Transactions on Computers},
+  issue_date = {July 1981},
+  volume = {30},
+  number = {7},
+  month = jul,
+  year = {1981},
+  issn = {0018-9340},
+  pages = {478--490},
+  numpages = {13},
+  doi = {10.1109/TC.1981.1675827},
+  acmid = {1311325},
+  publisher = {IEEE Computer Society},
+  address = {Washington, DC, USA},
+  keywords = {Data dependency, global microcode optimization, microcode compaction, parallel instruction scheduling, parallel processing, resource conflict, resource conflict, Data dependency, global microcode optimization, microcode compaction, parallel instruction scheduling, parallel processing}
+}
+
+@inproceedings{Young98,
+  author = {Young, Cliff and Smith, Michael D.},
+  title = {{Better Global Scheduling Using Path Profiles}},
+  booktitle = {Proceedings of the 31st Annual ACM/IEEE International Symposium on Microarchitecture},
+  series = {MICRO 31},
+  year = {1998},
+  isbn = {1-58113-016-3},
+  location = {Dallas, Texas, USA},
+  pages = {115--123},
+  numpages = {9},
+  url = {http://dl.acm.org/citation.cfm?id=290940.290968},
+  acmid = {290968},
+  publisher = {IEEE Computer Society Press},
+  address = {Los Alamitos, CA, USA},
+  keywords = {global instruction scheduling, path profiling, superblock scheduling},
+  doi = {10.1109/MICRO.1998.742774}
+}
+
+@inproceedings{Bodik99,
+  author = {Bod\'{\i}k, Rastislav and Gupta, Rajiv and Soffa, Mary Lou},
+  title = {{Load-Reuse Analysis: Design and Evaluation}},
+  booktitle = {Proceedings of the ACM SIGPLAN 1999 conference on Programming language design and implementation},
+  series = {PLDI '99},
+  year = {1999},
+  isbn = {1-58113-094-5},
+  location = {Atlanta, Georgia, USA},
+  pages = {64--76},
+  numpages = {13},
+  doi = {10.1145/301618.301643},
+  acmid = {301643},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {data-flow analysis, profile-guided optimizations, program representations, register promotion}
+}
+
+@inproceedings{Bodik97,
+  author = {Bod\'{\i}k, Rastislav and Gupta, Rajiv and Soffa, Mary Lou},
+  title = {{Interprocedural Conditional Branch Elimination}},
+  booktitle = {Proceedings of the ACM SIGPLAN 1997 conference on Programming language design and implementation},
+  series = {PLDI '97},
+  year = {1997},
+  isbn = {0-89791-907-6},
+  location = {Las Vegas, Nevada, USA},
+  pages = {146--158},
+  numpages = {13},
+  doi = {10.1145/258915.258929},
+  acmid = {258929},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+}
+
+@inproceedings{Bodik98,
+  author = {Bod\'{\i}k, Rastislav and Gupta, Rajiv and Soffa, Mary Lou},
+  title = {{Complete Removal of Redundant Expressions}},
+  booktitle = {Proceedings of the ACM SIGPLAN 1998 Conference on Programming Language Design and Implementation},
+  series = {PLDI '98},
+  year = {1998},
+  isbn = {0-89791-987-4},
+  location = {Montreal, Quebec, Canada},
+  pages = {1--14},
+  numpages = {14},
+  url = {http://doi.acm.org/10.1145/277650.277653},
+  doi = {10.1145/277650.277653},
+  acmid = {277653},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {control flow restructuring, demand-driven frequency data-flow analysis, partial redundancy elimination, profile-guided optimization, speculative execution}
+}
+
+@article{Bodik04,
+  author = {Bod\'{\i}k, Rastislav and Gupta, Rajiv and Soffa, Mary Lou},
+  title = {{Complete Removal of Redundant Expressions}},
+  journal = {SIGPLAN Notices},
+  issue_date = {April 2004},
+  volume = {39},
+  number = {4},
+  month = apr,
+  year = {2004},
+  issn = {0362-1340},
+  pages = {596--611},
+  numpages = {16},
+  doi = {10.1145/989393.989453},
+  acmid = {989453},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {control flow restructuring, demand-driven frequency data-flow analysis, partial redundancy elimination, profile-guided optimization, speculative execution}
+}
+
+@inproceedings{Bodik00,
+  author = {Bod\'{\i}k, Rastislav and Gupta, Rajiv and Sarkar, Vivek},
+  title = {{ABCD: Eliminating Array Bounds Checks on Demand}},
+  booktitle = {Proceedings of the ACM SIGPLAN 2000 Conference on Programming Language Design and Implementation},
+  series = {PLDI '00},
+  year = {2000},
+  isbn = {1-58113-199-2},
+  location = {Vancouver, British Columbia, Canada},
+  pages = {321--333},
+  numpages = {13},
+  url = {http://doi.acm.org/10.1145/349299.349342},
+  doi = {10.1145/349299.349342},
+  acmid = {349342},
+  publisher = {ACM},
+  address = {New York, NY, USA}
+}
+
+@inproceedings{Tallam04,
+  author = {Tallam, Sriraman and Zhang, Xiangyu and Gupta, Rajiv},
+  title = {{Extending Path Profiling Across Loop Backedges and Procedure Boundaries}},
+  booktitle = {Proceedings of the International Symposium on Code Generation and Optimization: Feedback-directed and Runtime Optimization},
+  series = {CGO '04},
+  year = {2004},
+  isbn = {0-7695-2102-9},
+  location = {Palo Alto, California},
+  pages = {251--264},
+  url = {http://dl.acm.org/citation.cfm?id=977395.977659},
+  acmid = {977659},
+  publisher = {IEEE Computer Society},
+  address = {Washington, DC, USA},
+  keywords = {path profiles, overlapping path profiles, profileguided optimization, and instruction scheduling},
+  doi = {10.1109/cgo.2004.1281679}
+}
+
+@inproceedings{Roy09,
+  author = {Roy, Subhajit and Srikant, Y. N.},
+  title = {{Profiling k-Iteration Paths: A Generalization of the Ball-Larus Profiling Algorithm}},
+  booktitle = {Proceedings of the 7th Annual IEEE/ACM International Symposium on Code Generation and Optimization},
+  series = {CGO '09},
+  year = {2009},
+  isbn = {978-0-7695-3576-0},
+  pages = {70--80},
+  numpages = {11},
+  url = {http://dx.doi.org/10.1109/CGO.2009.11},
+  doi = {10.1109/CGO.2009.11},
+  acmid = {1545058},
+  publisher = {IEEE Computer Society},
+  address = {Washington, DC, USA}
+}
+
+@article{Li12,
+  author = {Li, Bixin and Wang, Lulu and Leung, Hareton and Liu, Fei},
+  title = {{Profiling All Paths: A New Profiling Technique for Both Cyclic and Acyclic Paths}},
+  journal = {Journal of Systems and Software},
+  issue_date = {July, 2012},
+  volume = {85},
+  number = {7},
+  month = jul,
+  year = {2012},
+  issn = {0164-1212},
+  pages = {1558--1576},
+  numpages = {19},
+  url = {http://dx.doi.org/10.1016/j.jss.2012.01.046},
+  doi = {10.1016/j.jss.2012.01.046},
+  acmid = {2215266},
+  publisher = {Elsevier Science Inc.},
+  address = {New York, NY, USA},
+  keywords = {Breakpoint, Cyclic paths, Dynamic analysis, Path backwalk, Path profiling, Probe instrumentation}
+}
